--- a/outputs/templates/main.html
+++ b/outputs/templates/main.html
@@ -3,6 +3,7 @@
 		<title>{$title}</title>
 		<link type="text/css" rel="stylesheet" href="../../assets/css/app.css" />
 		<link rel="Shortcut Icon" type="image/x-icon" href="../../assets/img/favicon.ico" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	</head>
 
 	<body>
