--- a/outputs/templates/main.html
+++ b/outputs/templates/main.html
@@ -20,7 +20,7 @@
 					<div class='user-info-avatar'>						
 
 						<img
-							src='{$userAvatar}'
+							src='{$postOwnerAvatar}'
 							width='50'
 							height='50'
 						/>
